fix post list dark mode color scheme

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -677,3 +677,11 @@ footer a:nth-last-child(1){
 footer a:hover {
   text-decoration: none;
 }
+
+.dark .post-list:hover {
+  color: white;
+  background-color: #111111;
+  box-shadow: 8px 8px #ff9900;
+  transform: scale(1.01);
+  z-index: 99;
+}
